Fixing up spacing and elements positions

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,6 @@ button {
 
 h1 {
   font-size: 40px;
-  text-align: center;
   margin-top: 15px;
 }
 
@@ -50,7 +49,11 @@ ul {
 }
 
 .search-form {
-  text-align: center;
+  text-align: right;
+}
+
+.search-text-input {
+  width: 230px;
 }
 
 .todays-weather-row {
